update the latest note.

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 <li>Provide many Cucumber Automation frameworks templates via eclipse wizard, currently can support Java and Ruby well.</li>
 </ul>
 
-<p><strong>For Ruby User ,When you install it from the update site: http://alterhu.github.io/CucumberPeople/ ,please make sure you slected to install Aptana Plugin so that we can 
-	use the Ruby feature in eclipse,or you can take to intall it yourself from the below URL: </strong></p>
+<p><strong>For Ruby User ,When you install it from the update site: http://alterhu.github.io/CucumberPeople/ ,please make sure you selected to install Aptana Plugin so that we can 
+	use the Ruby feature in eclipse,or you can take to install it yourself from the below URL: </strong></p>
 <p><strong> <a href="http://www.aptana.com/products/studio3/download" target="_blank">Aptana Studio 3 Download Site</a></strong></p>
 
 <h3>
 <a id="install-cucumberpeople-plugin" class="anchor" href="#install-cucumberpeople-plugin" aria-hidden="true"><span class="octicon octicon-link"></span></a>CucumberPeople Release</h3>
-<p><strong>Latest Production Version : <a href="https://raw.githubusercontent.com/Alterhu/CucumberPeople/gh-pages/CucumberPeople_1.3.15.zip">1.4.115</a> --01/12/2015</strong> <strong><a href="version.txt" target="_blank">What's new?</a></strong>
+<p><strong>Latest Production Version : <a href="https://raw.githubusercontent.com/Alterhu/CucumberPeople/gh-pages/CucumberPeople_1.4.130.zip">1.4.130</a> --01/25/2015</strong> <strong><a href="version.txt" target="_blank">What's new?</a></strong>
 <h3>
 <a id="install-cucumberpeople-plugin" class="anchor" href="#install-cucumberpeople-plugin" aria-hidden="true"><span class="octicon octicon-link"></span></a>Install CucumberPeople Plugin</h3>
 
