--- a/install.html
+++ b/install.html
@@ -62,7 +62,7 @@
 
 			</li></ol>
 
-			<h3 style="font-size:150%;padding-bottom:0px; margin-bottom:5px">Manual Installation</h3>
+			<h3 style="font-size:150%;padding-bottom:0px; margin-bottom:5px">Manual Installation(Not available now)</h3>
 			<p></p><div class="download_box plugin_download">
                 <div class="download_padded" style="text-align:center">
                     <a class="download_a" href="http://alterhu.github.io/CucumberPeople/CucumberPeople.zip">Download Plugin Update Site</a>
