--- a/install.html
+++ b/install.html
@@ -37,6 +37,7 @@
 			}
 			
         </style>
+        <link rel="Shortcut Icon" href="images/cukes.gif" type="image/x-icon"/>
     </head>
 
     <body>
