--- a/index.html
+++ b/index.html
@@ -168,22 +168,22 @@ file. This should save you much time .</li>
   <li>Beauty the Cucumber report and support email notification (<strong>80% DONE</strong>)</li>
   <li>Support more cucumber languages: C#,Python,Groovy,Android.etc</li>
   <li>Integrate Cucumber with TestLink,ALM.etc</li>
-  <li>Provide more GUI E2E automation templates via eclipse wizard only one click (<strong>86% DONE</strong>)</li>
+  <li>Provide more GUI E2E automation templates via eclipse wizard only one click (<strong>100% DONE</strong>)</li>
   <li>Integrate Cucumber with FitNesse and Jenkins (<strong>2% DONE</strong>)</li>
-  <li>Create more automation testing project templates, including TestNG,Selenium,AutoIt.etc (<strong>64% DONE</strong>)</li>
+  <li>Create more automation testing project templates, including TestNG,Selenium,AutoIt.etc (<strong>85% DONE</strong>)</li>
   
 </ol>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>You can <a href="https://github.com/Alterhu" class="user-mention">@Alterhu</a> to ask for more features or fill an issue.We will reply you ASAP.
-Contact with him: <a href="mailto:alterhu2020@gmail.com">alterhu2020@gmail.com</a></p>
+<p>You can <a href="https://github.com/Alterhu" class="user-mention">@Alterhu</a> to ask for more features or fill an issue at <a href="https://github.com/Alterhu/CucumberPeople/issues/new">here</a>.We will reply you for the issue you had raised.
+Or you can directly contact with him: <a href="mailto:alterhu2020@gmail.com">alterhu2020@gmail.com</a></p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble with this plugin? Check out our problem documentation at wiki page: <a href="https://github.com/Alterhu/CucumberPeople/wiki" target="_blank">https://github.com/Alterhu/CucumberPeople/wiki</a> or contact <a href="mailto:alterhu2020@gmail.com">alterhu2020@gmail.com</a> and we will help you sort it out.</p>
+<p>Having trouble with this plugin? Check out our problem documentation at wiki page: <a href="https://github.com/Alterhu/CucumberPeople/wiki" target="_blank">https://github.com/Alterhu/CucumberPeople/wiki</a> or file issues <a href="https://github.com/Alterhu/CucumberPeople/issues/new">Cucumber Issues Holder</a> and we will try to help you sort it out.</p>
       </section>
     </div>
 
