open the issue page in a new tab

--- a/index.html
+++ b/index.html
@@ -177,13 +177,13 @@ file. This should save you much time .</li>
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>You can <a href="https://github.com/Alterhu" class="user-mention">@Alterhu</a> to ask for more features or fill an issue at <a href="https://github.com/Alterhu/CucumberPeople/issues/new">here</a>.We will reply you for the issue you had raised.
+<p>You can <a href="https://github.com/Alterhu" class="user-mention">@Alterhu</a> to ask for more features or fill an issue at <a href="https://github.com/Alterhu/CucumberPeople/issues/new" target="_blank">here</a>.We will reply you for the issue you had raised.
 Or you can directly contact with him: <a href="mailto:alterhu2020@gmail.com">alterhu2020@gmail.com</a></p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble with this plugin? Check out our problem documentation at wiki page: <a href="https://github.com/Alterhu/CucumberPeople/wiki" target="_blank">https://github.com/Alterhu/CucumberPeople/wiki</a> or file issues <a href="https://github.com/Alterhu/CucumberPeople/issues/new">Cucumber Issues Holder</a> and we will try to help you sort it out.</p>
+<p>Having trouble with this plugin? Check out our problem documentation at wiki page: <a href="https://github.com/Alterhu/CucumberPeople/wiki" target="_blank">https://github.com/Alterhu/CucumberPeople/wiki</a> or file issues <a href="https://github.com/Alterhu/CucumberPeople/issues/new" target="_blank">Cucumber Issues Holder</a> and we will try to help you sort it out.</p>
       </section>
     </div>
 
