--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <a id="welcome-to-cucumberpeople-project" class="anchor" href="#welcome-to-cucumberpeople-project" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to CucumberPeople Project</h3>
 
 <p>CucumberPeople is an eclipse plugin based on <a href="http://www.jetbrains.com/ruby/" target="_blank">RubyMine</a>, Not only includes all the Cucumber Features as RubyMine published already, but also provides many enhanced project features, and It's always <strong>OPEN AND FREE</strong></p>
-<p><strong>Why You Should Consider CucumberPeople ? </strong>Take a glance some features listed as below :</p>
+<p><strong>Why You Should Consider CucumberPeople ? <br/></strong>Take a glance some features listed as below :</p>
 
 <ul>
 <li>Support cucumber language Java and Ruby</li>
