--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="keywords" content="cucumber,BDD cucumber,cucumber eclipse,cucumber autocomplete eclipse,cucumber plugin eclipse">
+    <meta name="keywords" content="cucumber,BDD cucumber,Jenkins,cucumber eclipse,cucumber autocomplete eclipse,cucumber plugin eclipse">
     <meta name="description" content="eclipse plugin for cucumber,automation framework">   
     <meta name="description" content="CucumberPeople : Eclipse plugin for cucumber,support all features for Cucumber ,and provide many GUI automation framework project templates.">
 
@@ -50,6 +50,7 @@
 <li>Console Test Runner for Cucumber scenarios</li>
 <li>Integrate many Test Case Management tools with Cucumber:TestRail,TestLink,ALM(Currently It can only support TestRail )</li>
 <li>Provide many Cucumber Automation frameworks templates via eclipse wizard, currently can support Java and Ruby well.</li>
+<li>Using a Jenkins plugin to integrate cucumber framework with Jenkins as well.</li>
 </ul>
 
 <p><strong>For Ruby User ,When you install it from the update site: http://alterhu.github.io/CucumberPeople/ ,please make sure you selected to install Aptana Plugin so that we can 
@@ -159,6 +160,17 @@ file. This should save you much time .</li>
 <p><img src="https://raw.githubusercontent.com/Alterhu/CucumberPeople/gh-pages/images/testrail1.png" alt="testrail">
 <img src="https://raw.githubusercontent.com/Alterhu/CucumberPeople/gh-pages/images/testrail2.png" alt="testrail">
 <img src="https://raw.githubusercontent.com/Alterhu/CucumberPeople/gh-pages/images/testrail3.png" alt="testrail"></p>
+
+<h3>
+<a id="testrail-feature" class="anchor" href="#testrail-feature" aria-hidden="true"><span class="octicon octicon-link"></span></a>Feature - Jenkins Integration</h3>
+<p>Yes, It supports integrate Cucumber with Jenkins now </p>
+
+<p>
+	<img src="https://raw.githubusercontent.com/Alterhu/CucumberPeople/gh-pages/images/jenkins_install_plugin.png" alt="jenkins">
+	
+        <img src="https://raw.githubusercontent.com/Alterhu/CucumberPeople/gh-pages/images/jenkins_job_config.png" alt="jenkins">
+
+</p>
 
 <h3>
 <a id="cucumber-project-and-feature-creation" class="anchor" href="#cucumber-project-and-feature-creation" aria-hidden="true"><span class="octicon octicon-link"></span></a>CucumberPeople Roadmap</h3>
