--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 
 <h3>
 <a id="install-cucumberpeople-plugin" class="anchor" href="#install-cucumberpeople-plugin" aria-hidden="true"><span class="octicon octicon-link"></span></a>CucumberPeople Release</h3>
+<p><strong>Latest Production Version : <a href="https://raw.githubusercontent.com/Alterhu/CucumberPeople/gh-pages/CucumberPeople_1.4.140.zip">1.4.140</a> --06/08/2015</strong> <strong><a href="version.txt" target="_blank">What's new?</a></strong>
 <p><strong>Latest Production Version : <a href="https://raw.githubusercontent.com/Alterhu/CucumberPeople/gh-pages/CucumberPeople_1.4.135.zip">1.4.135</a> --04/22/2015</strong> <strong><a href="version.txt" target="_blank">What's new?</a></strong>
 <p><strong>Old Production Version : <a href="https://raw.githubusercontent.com/Alterhu/CucumberPeople/gh-pages/CucumberPeople_1.4.130.zip">1.4.130</a> --01/25/2015</strong> 
 <h3>
