--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>CucumberPeople | Eclipse Plugin for Cucumber--Created By Alter Hu</title>
 	<script type="text/javascript">
 	$(document).ready(function() {
-		$("a#release").fancybox();
+		  $.fancybox("testing");
 	});
 	</script>
   </head>
