--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
-	    <div style="display: none;"><a id="release" href="images/cuke.gif"><img alt="latest release" src="images/cuke.gif" /></a></div>
+	    <div style="display: none;"><a id="release" href="images/cukes.gif"><img alt="latest release" src="images/cuke.gif" /></a></div>
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/Alterhu/CucumberPeople" target="_blank">View Alter GitHub</a>
 
