--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <meta name="description" content="CucumberPeople : Eclipse plugin for cucumber,support all features for Cucumber ,and provide many GUI automation framework project templates.">
 
 	<!-- Add jQuery library -->
-	<script type="text/javascript" src="../jquery/jquery-1.10.1.min.js"></script>
+	<script type="text/javascript" src="jquery/jquery-1.10.1.min.js"></script>
 
 	<!-- Add mousewheel plugin (this is optional) -->
-	<script type="text/javascript" src="../jquery/jquery.mousewheel-3.0.6.pack.js"></script>
+	<script type="text/javascript" src="jquery/jquery.mousewheel-3.0.6.pack.js"></script>
 
 	<!-- Add fancyBox main JS and CSS files -->
-	<script type="text/javascript" src="../fancybox/jquery.fancybox.js?v=2.1.5"></script>
-	<link rel="stylesheet" type="text/css" href="../fancybox/jquery.fancybox.css?v=2.1.5" media="screen" />
+	<script type="text/javascript" src="fancybox/jquery.fancybox.js?v=2.1.5"></script>
+	<link rel="stylesheet" type="text/css" href="fancybox/jquery.fancybox.css?v=2.1.5" media="screen" />
 	
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -23,7 +23,7 @@
     <title>CucumberPeople | Eclipse Plugin for Cucumber--Created By Alter Hu</title>
 	<script type="text/javascript">
 	$(document).ready(function() {
-		  $.fancybox("testing");
+		  $.fancybox("CucumberPeople 1.4.140 Release Now!");
 	});
 	</script>
   </head>
