--- a/index.html
+++ b/index.html
@@ -23,7 +23,38 @@
     <title>CucumberPeople | Eclipse Plugin for Cucumber--Created By Alter Hu</title>
 	<script type="text/javascript">
 	$(document).ready(function() {
-		  $.fancybox("CucumberPeople 1.4.140 Release Now!");
+		   $.fancybox([
+			{
+				'href'  : 'http://farm5.static.flickr.com/4005/4213562882_851e92f326.jpg',
+				'title' : 'CucumberPeople Latest Relase'
+			},
+			{
+				'href'  : 'http://farm5.static.flickr.com/4005/4213562882_851e92f326.jpg',
+				'title' : 'Cucumber Step autocomplete'
+			}
+       ], {
+             
+			  'closeBtn'  : false,
+			  'arrows'    : false,
+			  'nextClick' : true,
+			  'padding'           : 0,
+			  'transitionIn'      : 'none',
+			  'transitionOut'     : 'none',
+			  'type'              : 'image',
+			  "loop"        : true,
+			  "autoPlay"    : true,
+			  "playSpeed"   : 800,
+			  "nextSpeed"   : 500,
+			  "prevSpeed"   : 500,
+			  "openSpeed"   : 500,
+			  "speedOut"    : 500,
+			  "openEffect"  : "fade", 
+			  "closeEffect" : "fade",
+			  "nextEffect"  : "fade",
+			  "prevEffect"  : "fade"
+
+     }
+	 );
 	});
 	</script>
   </head>
