--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 	$(document).ready(function() {
 		   $.fancybox([
 			{
-				'href'  : 'http://farm5.static.flickr.com/4005/4213562882_851e92f326.jpg',
+				'href'  : 'images/cukes.gif',
 				'title' : 'CucumberPeople Latest Relase'
 			},
 			{
-				'href'  : 'http://farm5.static.flickr.com/4005/4213562882_851e92f326.jpg',
+				'href'  : 'images/cukes.gif',
 				'title' : 'Cucumber Step autocomplete'
 			}
        ], {
