--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			}
        ], {
              
-			  'closeBtn'  : false,
+			  'closeBtn'  : true,
 			  'arrows'    : false,
 			  'nextClick' : true,
 			  'padding'           : 0,
