--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				'title' : 'CucumberPeople Latest Relase'
 			},
 			{
-				'href'  : 'images/cukes.gif',
+				'href'  : 'images/autocomplete3.png',
 				'title' : 'Cucumber Step autocomplete'
 			}
        ], {
