--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	$(document).ready(function() {
 		   $.fancybox([
 			{
-				'href'  : 'images/cukes.gif',
+				'href'  : 'images/logo.png',
 				'title' : 'CucumberPeople Latest Relase'
 			},
 			{
