change the autoplay content.

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 		   $.fancybox([
 			{
 				'href'  : 'images/logo.png',
-				'title' : 'CucumberPeople Latest Relase'
+				'title' : 'CucumberPeople Latest Version'
 			},
 			{
 				'href'  : 'images/autocomplete3.png',
-				'title' : 'Cucumber Step autocomplete'
+				'title' : 'Cucumber Step Autocomplete Feature'
 			}
        ], {
              
