--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			}
        ], {
              
-			  'closeBtn'  : true,
+			  'closeBtn'  : false,
 			  'arrows'    : false,
 			  'nextClick' : true,
 			  'padding'           : 0,
@@ -43,7 +43,7 @@
 			  'type'              : 'image',
 			  "loop"        : true,
 			  "autoPlay"    : true,
-			  "playSpeed"   : 2000,
+			  "playSpeed"   : 4000,
 			  "nextSpeed"   : 500,
 			  "prevSpeed"   : 500,
 			  "openSpeed"   : 500,
