add the fix image .

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 			{
 				'href'  : 'images/autocomplete3.png',
 				'title' : 'Cucumber Step Autocomplete Feature'
+			},
+			{
+				'href'  : 'images/fix_new.png',
+				'title' : 'Cucumber Step Error Fix'
 			}
        ], {
              
@@ -43,7 +47,7 @@
 			  'type'              : 'image',
 			  "loop"        : true,
 			  "autoPlay"    : true,
-			  "playSpeed"   : 4000,
+			  "playSpeed"   : 4500,
 			  "nextSpeed"   : 500,
 			  "prevSpeed"   : 500,
 			  "openSpeed"   : 500,
