--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		   $.fancybox([
 			{
 				'href'  : 'images/logo.png',
-				'title' : 'CucumberPeople Latest Version'
+				'title' : 'CucumberPeople Release Version'
 			},
 			{
 				'href'  : 'images/autocomplete3.png',
@@ -34,7 +34,7 @@
 			},
 			{
 				'href'  : 'images/fix_new.png',
-				'title' : 'Cucumber Step Error Fix'
+				'title' : 'Cucumber Step Error QuickFix'
 			}
        ], {
              
