--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	$(document).ready(function() {
 		   $.fancybox([
 			{
-				'href'  : 'images/logo.png',
+				'href'  : 'https://cucumber.io',
 				'title' : 'CucumberPeople Release Version'
 			},
 			{
