--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <a id="forkme_banner" href="https://github.com/Alterhu/CucumberPeople" target="_blank">View Alter GitHub</a>
 
           <h1 id="project_title">CucumberPeople</h1>
-          <h2 id="project_tagline">Eclipse plugin for cucumber,support all cucumber features ,and provide many GUI automation frameowrk templates via eclipse wizard.</h2>
+          <h2 id="project_tagline">An eclipse plugin for cucumber feature development,and also provide many GUI automation frameworks via eclipse wizard.</h2>
 
         </header>
     </div>
